# sqlx_prepare_bug

./: .gitignore  Cargo.toml  README.md
crate-b/: .env  Cargo.toml
crate-b/src/: main.rs
crate_c/: Cargo.toml
crate_ç/: Cargo.toml
crate_ç/src/: main.rs
cratea/: Cargo.toml
cratea/src/: main.rs
migrations/: 20220823195302_create_table_a.sql  20220823195302_create_tables.sql  20220823195502_create_table_b.sql  20220823195702_create_table_c.sql
