[package]
name = "crate-b"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.62" }
rand = { version = "0.8.5" }
sqlx = { version = "0.6.1", features = ["offline", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.20.1", features = ["macros"]}
