[package]
name = "crate_รง"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.62" }
rand = { version = "0.8.5" }
sqlx = { version = "=0.6.1", features = ["offline", "postgres", "runtime-tokio-rustls"] }
#sqlx = { git = "https://github.com/cycraig/sqlx", branch = "fix/prepare-race-condition", features = ["offline", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.20.1", features = ["macros"]}
